--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="106" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K0N-Um-D7r">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalEntriesTableViewCell" rowHeight="107" id="ogn-4c-QqH" customClass="JournalEntriesTableViewCell" customModule="TripLog" customModuleProvider="target">
@@ -102,7 +102,7 @@
                     <navigationItem key="navigationItem" id="YcF-mY-hIn">
                         <barButtonItem key="rightBarButtonItem" title="New Journal Entry" id="G8D-Dr-3ze">
                             <connections>
-                                <segue destination="0zj-l8-yQj" kind="presentation" identifier="AddJournal" id="qu8-hy-h17"/>
+                                <segue destination="Pgc-aW-7tY" kind="show" identifier="AddJournal" id="Vqx-5V-5Kc"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -153,6 +153,17 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4ii-nS-oVb">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="Share" id="pib-Gy-CPo">
+                                        <connections>
+                                            <action selector="shareButtonClicked:" destination="Wqa-rV-cbl" id="PTs-i6-169"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -165,17 +176,11 @@
                             <constraint firstAttribute="trailingMargin" secondItem="hap-qm-Mcf" secondAttribute="trailing" id="xrl-Tx-1Ix"/>
                         </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem title="Share" id="atI-bf-5sP">
-                            <connections>
-                                <action selector="shareButtonClicked:" destination="Wqa-rV-cbl" id="CWG-rs-oQT"/>
-                            </connections>
-                        </barButtonItem>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" id="U2W-S1-e0R">
                         <barButtonItem key="rightBarButtonItem" systemItem="edit" id="bj6-zf-X5E">
                             <connections>
-                                <segue destination="SFY-8B-jV2" kind="show" identifier="EditJournal" id="efc-6F-LWC"/>
+                                <segue destination="TYM-nd-d0E" kind="show" identifier="EditJournal" id="6LY-FJ-1bW"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -274,6 +279,23 @@
                                     </textField>
                                 </subviews>
                             </stackView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nc5-XP-0am">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="Camera" id="RhU-ia-bAX">
+                                        <connections>
+                                            <action selector="importImage:" destination="TYM-nd-d0E" id="mjq-Vg-QLv"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="xKl-Vp-Nyd"/>
+                                    <barButtonItem title="Upload a photo/video" id="FRW-Do-qwm">
+                                        <connections>
+                                            <action selector="importImage:" destination="TYM-nd-d0E" id="aU2-kT-Y0N"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -290,23 +312,12 @@
                             <constraint firstItem="lCp-Af-4Wr" firstAttribute="top" secondItem="6UN-oG-i3J" secondAttribute="bottom" constant="10" id="vgA-Ed-F2B"/>
                         </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem title="Camera" id="uOX-T2-Tcm">
-                            <connections>
-                                <action selector="importImage:" destination="TYM-nd-d0E" id="xVc-ni-OeI"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="FuM-SV-FcD"/>
-                        <barButtonItem title="Upload a photo/video" id="HVg-EC-umY">
-                            <connections>
-                                <action selector="importImage:" destination="TYM-nd-d0E" id="VdF-Q7-bgD"/>
-                            </connections>
-                        </barButtonItem>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Edit Journal" id="YOH-NV-Qwm">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="QGT-mv-GQv">
                             <connections>
                                 <action selector="cancelEditing:" destination="TYM-nd-d0E" id="Sdd-my-Wpg"/>
+                                <segue destination="FFQ-2j-Rlg" kind="unwind" unwindAction="unwindFromEditWithSender:" id="cZk-u0-2Sa"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="fZO-E6-RLF">
@@ -317,19 +328,19 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="cameraButton" destination="uOX-T2-Tcm" id="M35-od-aoM"/>
+                        <outlet property="cameraButton" destination="RhU-ia-bAX" id="W5e-qi-5B5"/>
                         <outlet property="dateTextField" destination="2Se-qX-lMN" id="ls4-eN-zg0"/>
                         <outlet property="journalTextView" destination="6UN-oG-i3J" id="cQj-VR-em5"/>
                         <outlet property="locationTextField" destination="cbN-wT-bkh" id="FBp-7s-xsS"/>
                         <outlet property="saveButton" destination="fZO-E6-RLF" id="8Nz-4W-JRz"/>
                         <outlet property="tripNameTextField" destination="zvE-Na-lZH" id="MbE-sM-lgu"/>
-                        <outlet property="uploadButton" destination="HVg-EC-umY" id="2aq-J9-4Nb"/>
+                        <outlet property="uploadButton" destination="FRW-Do-qwm" id="495-PH-w2i"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sD3-v7-Pww" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="FFQ-2j-Rlg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3905" y="-980"/>
+            <point key="canvasLocation" x="3300" y="-980"/>
         </scene>
         <!--New Journal Entry-->
         <scene sceneID="dEq-jG-1fA">
@@ -414,6 +425,23 @@
                                     </textField>
                                 </subviews>
                             </stackView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gSL-KJ-oxz">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="Camera" id="xaz-fQ-PJJ">
+                                        <connections>
+                                            <action selector="importImage:" destination="Pgc-aW-7tY" id="5lf-0X-HD8"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="4Jf-bl-Xlc"/>
+                                    <barButtonItem title="Upload a photo/video" id="BGr-QF-Tea">
+                                        <connections>
+                                            <action selector="importImage:" destination="Pgc-aW-7tY" id="Gi4-Ne-n4t"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -429,24 +457,12 @@
                             <constraint firstItem="ddn-6w-CEX" firstAttribute="top" secondItem="ytS-jf-ctG" secondAttribute="bottom" constant="10" id="vgH-eK-dmJ"/>
                         </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem title="Camera" id="Rlq-18-kgE">
-                            <connections>
-                                <action selector="importImage:" destination="Pgc-aW-7tY" id="a6n-nv-kHj"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="fhi-l1-sJv"/>
-                        <barButtonItem title="Upload a photo/video" id="EyR-P9-gZa">
-                            <connections>
-                                <action selector="importImage:" destination="Pgc-aW-7tY" id="4eT-DR-pSe"/>
-                            </connections>
-                        </barButtonItem>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="New Journal Entry" id="4Yx-rn-t9r">
                         <barButtonItem key="backBarButtonItem" title="Journal Entries" id="bYf-xA-0qk"/>
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="5f6-41-ThM">
                             <connections>
-                                <action selector="cancelEditing:" destination="Pgc-aW-7tY" id="uXJ-vO-Mxi"/>
+                                <segue destination="ajq-gl-0xF" kind="unwind" unwindAction="unwindFromEditWithSender:" id="biR-Zy-fcZ"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="3DH-aT-dw9">
@@ -457,19 +473,19 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="cameraButton" destination="Rlq-18-kgE" id="fBS-dy-6hI"/>
+                        <outlet property="cameraButton" destination="xaz-fQ-PJJ" id="lsy-cA-xdD"/>
                         <outlet property="dateTextField" destination="Gb8-eP-pNn" id="8ER-N4-af4"/>
                         <outlet property="journalTextView" destination="QgO-Sw-gyA" id="Ve5-P1-MnY"/>
                         <outlet property="locationTextField" destination="eXj-xz-4mB" id="wGI-mg-Lbd"/>
                         <outlet property="saveButton" destination="3DH-aT-dw9" id="JPt-mK-8xz"/>
                         <outlet property="tripNameTextField" destination="q4V-dy-c9P" id="Zcj-j5-Yyq"/>
-                        <outlet property="uploadButton" destination="EyR-P9-gZa" id="nvN-Kg-7kf"/>
+                        <outlet property="uploadButton" destination="BGr-QF-Tea" id="Jn6-OJ-s1t"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wBJ-wG-Of1" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="ajq-gl-0xF" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3657" y="-201"/>
+            <point key="canvasLocation" x="3300" y="-321"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -493,7 +509,7 @@
         <!--Journal Entries-->
         <scene sceneID="UFQ-qb-iYX">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="weU-06-GHG" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="weU-06-GHG" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Journal Entries" image="first" id="acW-dT-cKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="sXf-de-ijy">
@@ -512,28 +528,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z53-zb-wLw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="VEH-9T-1LM">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="0zj-l8-yQj" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cFD-Nw-HSb">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="72c-ym-FVt">
-                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="Pgc-aW-7tY" kind="relationship" relationship="rootViewController" id="m0b-dl-H8A"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XAO-hV-NaJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2697" y="-296"/>
         </scene>
         <!--NYC Trip-->
         <scene sceneID="ijn-Sv-GjU">
@@ -667,11 +661,7 @@
                                 <action selector="GoBack:" destination="SeV-PS-vVw" id="hDA-7I-kQk"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="New Entry" id="bH9-QV-wc2">
-                            <connections>
-                                <segue destination="0zj-l8-yQj" kind="show" identifier="NewEntryFromTrip" id="CNC-Rr-jgt"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="New Entry" id="bH9-QV-wc2"/>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -976,28 +966,6 @@
             <point key="canvasLocation" x="5177" y="2407"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="lfI-ow-NY8">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="SFY-8B-jV2" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="n2B-Yj-dbp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="lBK-cb-GSC">
-                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="TYM-nd-d0E" kind="relationship" relationship="rootViewController" id="NrN-fs-QaC"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Q2-NI-hKf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3196" y="-982.75862068965523"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="SsK-LF-bBq">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ghe-fi-4hT" sceneMemberID="viewController">
@@ -1077,6 +1045,5 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="qgu-Bx-CKy"/>
-        <segue reference="qu8-hy-h17"/>
     </inferredMetricsTieBreakers>
 </document>
