--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -102,7 +102,7 @@
                     <navigationItem key="navigationItem" id="YcF-mY-hIn">
                         <barButtonItem key="rightBarButtonItem" title="New Journal Entry" id="G8D-Dr-3ze">
                             <connections>
-                                <segue destination="Pgc-aW-7tY" kind="show" identifier="AddJournal" id="Vqx-5V-5Kc"/>
+                                <segue destination="TYM-nd-d0E" kind="show" identifier="AddJournal" id="dCT-tE-Y8K"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -208,6 +208,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bno-dX-jtP">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </scrollView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HPR-UK-3Dz">
                                 <rect key="frame" x="10" y="74" width="355" height="30"/>
                                 <subviews>
@@ -235,7 +239,7 @@
                                         <rect key="frame" x="182.5" y="0.0" width="172.5" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6b-uT-eNL">
-                                                <rect key="frame" x="0.0" y="0.0" width="65.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="66" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="65.5" id="cfQ-DR-dwo"/>
                                                 </constraints>
@@ -244,7 +248,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cbN-wT-bkh">
-                                                <rect key="frame" x="75.5" y="0.0" width="97" height="30"/>
+                                                <rect key="frame" x="76" y="0.0" width="96.5" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -279,9 +283,8 @@
                                     </textField>
                                 </subviews>
                             </stackView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nc5-XP-0am">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nc5-XP-0am">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem title="Camera" id="RhU-ia-bAX">
                                         <connections>
@@ -303,11 +306,13 @@
                             <constraint firstItem="sUF-fr-IgY" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="5hL-ms-fYc"/>
                             <constraint firstItem="HPR-UK-3Dz" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="97z-IT-yRZ"/>
                             <constraint firstItem="sUF-fr-IgY" firstAttribute="top" secondItem="HPR-UK-3Dz" secondAttribute="bottom" constant="10" id="IsY-ui-zdx"/>
+                            <constraint firstItem="Nc5-XP-0am" firstAttribute="top" secondItem="lCp-Af-4Wr" secondAttribute="top" id="Pyc-Cb-PCx"/>
                             <constraint firstItem="6UN-oG-i3J" firstAttribute="top" secondItem="sUF-fr-IgY" secondAttribute="bottom" constant="10" id="VZp-TP-RuP"/>
                             <constraint firstItem="HPR-UK-3Dz" firstAttribute="top" secondItem="KWp-x1-Kqo" secondAttribute="bottom" constant="10" id="WIE-Jg-PdV"/>
                             <constraint firstItem="6UN-oG-i3J" firstAttribute="top" secondItem="sUF-fr-IgY" secondAttribute="bottom" constant="10" id="Xt2-9d-uAi"/>
                             <constraint firstItem="6UN-oG-i3J" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="dAe-HS-g6G"/>
                             <constraint firstAttribute="trailing" secondItem="sUF-fr-IgY" secondAttribute="trailing" constant="10" id="ghc-qX-qNA"/>
+                            <constraint firstItem="Nc5-XP-0am" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" id="qtQ-Mz-fvy"/>
                             <constraint firstAttribute="trailing" secondItem="HPR-UK-3Dz" secondAttribute="trailing" constant="10" id="sHV-e9-dQM"/>
                             <constraint firstItem="lCp-Af-4Wr" firstAttribute="top" secondItem="6UN-oG-i3J" secondAttribute="bottom" constant="10" id="vgA-Ed-F2B"/>
                         </constraints>
@@ -316,8 +321,7 @@
                     <navigationItem key="navigationItem" title="Edit Journal" id="YOH-NV-Qwm">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="QGT-mv-GQv">
                             <connections>
-                                <action selector="cancelEditing:" destination="TYM-nd-d0E" id="Sdd-my-Wpg"/>
-                                <segue destination="FFQ-2j-Rlg" kind="unwind" unwindAction="unwindFromEditWithSender:" id="cZk-u0-2Sa"/>
+                                <segue destination="FFQ-2j-Rlg" kind="unwind" unwindAction="unwindFromEditWithSender:" id="xib-Zt-7WN"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="fZO-E6-RLF">
@@ -326,6 +330,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="cameraButton" destination="RhU-ia-bAX" id="W5e-qi-5B5"/>
@@ -340,7 +345,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sD3-v7-Pww" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="FFQ-2j-Rlg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3300" y="-980"/>
+            <point key="canvasLocation" x="3300" y="-583"/>
         </scene>
         <!--New Journal Entry-->
         <scene sceneID="dEq-jG-1fA">
@@ -485,7 +490,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wBJ-wG-Of1" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="ajq-gl-0xF" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3300" y="-321"/>
+            <point key="canvasLocation" x="3300" y="169"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -510,7 +515,7 @@
         <scene sceneID="UFQ-qb-iYX">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="weU-06-GHG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Journal Entries" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Journal Entries" image="note-write-7" id="acW-dT-cKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="sXf-de-ijy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -906,7 +911,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dqj-5q-jzT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2485.5999999999999" y="586.95652173913049"/>
+            <point key="canvasLocation" x="1630" y="587"/>
         </scene>
         <!--New Trip-->
         <scene sceneID="dt2-G3-JyZ">
@@ -1023,7 +1028,7 @@
         <scene sceneID="Ww4-ov-fpP">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yPR-YY-BMK" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Trips" image="second" id="3hD-N6-5WC"/>
+                    <tabBarItem key="tabBarItem" title="Trips" image="earth-america-7" id="3hD-N6-5WC"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Le6-j9-c34">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1036,14 +1041,15 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uRV-lq-5Z9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1234" y="587"/>
+            <point key="canvasLocation" x="750" y="587"/>
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="earth-america-7" width="30" height="30"/>
+        <image name="note-write-7" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="dCT-tE-Y8K"/>
         <segue reference="qgu-Bx-CKy"/>
     </inferredMetricsTieBreakers>
 </document>
