Date picker working

--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -1035,6 +1035,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="qgu-Bx-CKy"/>
-        <segue reference="6LY-FJ-1bW"/>
+        <segue reference="dCT-tE-Y8K"/>
     </inferredMetricsTieBreakers>
 </document>
